<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:weightSum="10"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ml_iv_login"
            android:src="@drawable/login_icon"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ml_et_username"
            android:hint="@string/mainLayout_username"
            android:focusable="true"
            android:textSize="25dp"
            android:maxLength="30"
            android:maxLines="1"
            android:gravity="center"
            android:textColorHighlight="@android:color/holo_blue_light"
            android:textColorHint="@android:color/black"
            android:layout_marginTop="46dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ml_et_password"
            android:hint="@string/mainLayout_password"
            android:ems="10"
            android:textSize="25dp"
            android:maxLength="10"
            android:maxLines="1"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_below="@id/ml_et_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@id/ml_et_username"
            android:layout_alignEnd="@id/ml_et_username"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ml_btn_login"
            android:layout_below="@id/ml_et_password"
            android:text="@string/mainlayout_login"
            android:textSize="50dp"
            android:onClick="btnLoginOnClick"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>
